--- a/formulario2.html
+++ b/formulario2.html
@@ -76,7 +76,7 @@
       </div>
 <hr>
       <div>
-        <label>I agree to the terms and condition</label>
+        <label>I agree to the terms and conditions</label>
         <input type="checkbox" required>
       </div>
   
